--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .signup-container {
   width: 100vw;
 }
@@ -67,7 +72,7 @@
 
 .signupForm-card {
   margin: 60px auto;
-  width: 1060px;
+  width: 700px;
   height: 647px;
   padding: 50px;
   border-top: 1px solid rgb(34, 34, 34);
@@ -75,7 +80,7 @@
 }
 
 .signupForm-first-row {
-  width: 1030px;
+  width: 700px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -83,4 +88,154 @@
 
 .signupForm-first-row div {
   flex-basis: 48%;
+}
+
+.movieList-container {
+  width: 100vw;
+  margin: 50px auto;
+}
+
+.movieList {
+  width: 980px;
+  margin: 0 auto;
+}
+
+.movieList-header {
+  width: 100%;
+  height: 60px;
+  font-weight: 500;
+  border-bottom: 3px solid #241d1e;
+
+}
+
+.movieList-header h3 {
+  font-size: 36px;
+  display: inline-block;
+  color: #222;
+}
+
+.movieList-selectSorting {
+  display: flex;
+  margin-top: 20px;
+  flex-direction: row;
+  justify-content: end;
+  height: 30px;
+}
+
+.movieList-selectSorting label {
+  display: hidden;
+}
+
+.movieList-sortButton {
+  margin-left: 3px;
+  display: inline-block;
+  background-color: white;
+  cursor: pointer;
+}
+
+.movieRow {
+  width: 980px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20px auto;
+}
+
+.movieRowCard {
+  width: 300px;
+  height: 600px;
+}
+
+.movieCard-header {
+  height: 29px;
+  font-size: 19px;
+  color: white;
+  background-color: #fb4357;
+  text-align: center;
+  line-height: 29px;
+}
+
+.movieCard-header strong {
+  margin: 3px 0 3px 0;
+}
+
+/* .movieCard-image {
+  width: 100%;
+  height: 300px;
+  background-image: url('/img/broker.jpg');
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+} */
+
+.movieCard-image {
+  margin-top: 5px;
+  width: 100%;
+}
+
+.movieCard-footer {
+  margin-top: 5px;
+}
+
+.footer-title {
+  display: block;
+  color: #333333;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.score {
+  height: 26px;
+  line-height: 26px;
+  margin-top: 7px;
+  font-size: 11px;
+  display: flex;
+  flex-direction: row;
+  vertical-align: middle;
+}
+
+.score strong {
+  color: #666666;
+}
+
+.score > span {
+  color: #666666;
+}
+
+
+.ticketingPercent {
+  margin-left: 4px;
+}
+
+.egg-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.egg {
+  margin-right: 2px;
+  width: 18px;
+  height: 26px;
+  vertical-align: middle;
+  background: url('https://img.cgv.co.kr/R2014/images/sprite/sprite_egg.png') no-repeat -40px -47px;
+}
+
+.date {
+  font-size: 11px;
+  color: #666666;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.movieCard-button {
+  margin-top: 13px;
+  width: 135px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: white;
+  background-color: #fb4357;
+  border-radius: 5px;
 }
