영화 상영 시간표 구현

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@
   text-align: center;
 }
 
+.signupForm-header>p {
+  margin-top: 35px;
+}
+
 .signupForm-container h1 {
   color: rgb(34, 34, 34);
   font-weight: bold;
@@ -70,24 +74,45 @@
   font-family: cj_onlyone_new_medium;
 }
 
+.signupForm-signupButton {
+  height: 34px;
+  margin-top: 40px;
+  font-size: 19px;
+  color: white;
+  background-color: #fb4357;
+  text-align: center;
+  line-height: 34px;
+  border-radius: 6px;
+}
+
+.signupForm-loginButton {
+  height: 34px;
+  margin-top: 10px;
+  font-size: 19px;
+  color: white;
+  background-color: #666666;
+  text-align: center;
+  line-height: 34px;
+  border-radius: 6px;
+  border: #666666;
+}
+
 .signupForm-card {
   margin: 60px auto;
   width: 700px;
-  height: 647px;
+  height: 340px;
   padding: 50px;
   border-top: 1px solid rgb(34, 34, 34);
   background: rgb(248, 248, 248);
 }
 
-.signupForm-first-row {
-  width: 700px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.signupForm {
+  width: 240px;
+  margin: 0 auto;
 }
 
-.signupForm-first-row div {
-  flex-basis: 48%;
+.signupForm>div {
+  margin-bottom: 10px;
 }
 
 .movieList-container {
@@ -152,7 +177,7 @@
   height: 29px;
   font-size: 19px;
   color: white;
-  background-color: #fb4357;
+  background-color: #333333;
   text-align: center;
   line-height: 29px;
 }
@@ -435,8 +460,9 @@
   border-bottom: 1px #ddd solid;
 }
 
-.reviewList-container > div:nth-child(2n-1) {
-  border-right: 1px #ddd solid;;
+.reviewList-container>div:nth-child(2n-1) {
+  border-right: 1px #ddd solid;
+  ;
 }
 
 .reviewItem-thumb {
@@ -454,7 +480,7 @@
   margin-left: 15px;
   margin-top: 20px;
   display: flex;
-  height:100px;
+  height: 100px;
 }
 
 .reviewItem-header {
@@ -462,7 +488,7 @@
   flex-direction: row;
 }
 
-.reviewItem-header > span {
+.reviewItem-header>span {
   font-weight: 400;
   color: #666;
   margin-left: 8px;
@@ -472,7 +498,7 @@
   flex-basis: 100%;
 }
 
-.reviewItem-userInfo > p {
+.reviewItem-userInfo>p {
   margin-top: 13px;
   font-weight: 550;
 }
@@ -489,4 +515,242 @@
 
 .reviewItem-secondRow img {
   margin-right: 8px;
+}
+
+.loginForm-container {
+  width: 100vw;
+}
+
+.loginForm-wrapper {
+  margin: 50px auto;
+}
+
+.loginForm-nav {
+  width: 541px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.loginForm-nav>div {
+  font-size: 13px;
+  text-align: center;
+  line-height: 37px;
+  width: 110px;
+  height: 37px;
+  background: #898987;
+  margin-right: 3px;
+  border-radius: 5px 5px 0 0;
+  color: white;
+  font-weight: 800;
+}
+
+.loginForm-nav>div:last-child {
+  width: 120px;
+}
+
+.loginForm-nav>div:first-child {
+  background-color: #fb4357;
+}
+
+.loginForm {
+  margin: 0 auto 50px auto;
+  width: 541px;
+  height: 350px;
+  border-bottom: 2px solid #898987;
+  border-top: 2px solid #898987;
+}
+
+.loginForm-header {
+  margin-top: 30px;
+  color: #666666;
+  text-align: center;
+}
+
+
+.loginForm-contentBox input[type="text"] {
+  display: block;
+  margin-bottom: 5px;
+  background: url('https://img.cgv.co.kr/R2014/images/sprite/sprite_icon.png') 12px -230px no-repeat;
+  width: 250px;
+  height: 35px;
+  padding: 0 5px 0 40px;
+  border: 2px solid #b5b5b5;
+  line-height: 33px;
+  font-weight: 400;
+}
+
+.loginForm-contentBox {
+  width: 300px;
+  margin: 40px auto 0 auto;
+}
+
+.loginForm-contentBox input[type="password"] {
+  display: block;
+  margin-bottom: 5px;
+  background: url('https://img.cgv.co.kr/R2014/images/sprite/sprite_icon.png') 12px -261px no-repeat;
+  width: 250px;
+  height: 35px;
+  padding: 0 5px 0 40px;
+  border: 2px solid #b5b5b5;
+  line-height: 33px;
+  font-weight: 400;
+}
+
+.loginForm-outerButton {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 35px;
+  border: #fb4357 1.5px solid;
+  box-sizing: border-box;
+  justify-content: center;
+}
+
+.loginForm-innerButton {
+  width: 296px;
+  height: 31px;
+  background-color: #fb4357;
+  color: white;
+  text-align: center;
+  line-height: 31px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.loginForm-footer {
+  width: 300px;
+  margin: 10px auto 0 auto;
+}
+
+.loginForm-footer>label {
+  font-size: 13px;
+  margin-right: 5px;
+  text-decoration: underline;
+}
+
+.loginForm-footer-first {
+  margin-left: 33px;
+}
+
+.loginForm-naver {
+  width: 300px;
+  margin: 20px auto;
+}
+
+.loginForm-naver>img {
+  width: 100%;
+}
+
+.loginForm-signup {
+  width: 720px;
+  height: 60px;
+  border: 1px solid #d5d4ca;
+  font-family: 'Noto Sans KR', 'CJONLYONENEW', '맑은 고딕', '돋움', Dotum, sans-serif;
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto 50px auto;
+  line-height: 60px;
+  padding: 0 10px 0 30px;
+  align-items: center;
+}
+
+.loginForm-signup-text>strong {
+  margin-right: 15px;
+}
+
+.loginForm-signup-button {
+  text-align: center;
+  width: 180px;
+  color: #fb4357;
+  border: 2px solid #fb4357;
+  height: 35px;
+  line-height: 35px;
+  margin-left: 20px;
+  text-decoration: none;
+}
+
+.movieRow>div:nth-child(1)>.movieCard-header:nth-child(1) {
+  background-color: #fb4357;
+}
+
+.movieRow>div:nth-child(2)>.movieCard-header:nth-child(1) {
+  background-color: #fb4357;
+}
+
+.movieRow>div:nth-child(3)>.movieCard-header:nth-child(1) {
+  background-color: #fb4357;
+}
+
+.timeTableList-container {
+  width: 100vw;
+}
+
+.timeTableList-contentBox {
+  margin: 70px auto;
+  width: 980px;
+  border-top: #333333 solid 1px;
+  border-bottom: #333333 solid 1px;
+}
+
+.timeTableItem-container {
+  width: 920px;
+  height: 300px;
+  padding: 30px 40px 30px 40px;
+  border-bottom: 1px solid #333333;
+}
+
+.timeTableItem-header {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.timeTableItem-header > label {
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.timeTable-status {
+  display: inline-block;
+  width: 70px;
+  height: 30px;
+  border: #3e82a4 2px solid;
+  line-height: 30px;
+  text-align: center;
+  font-weight: 600;
+  color: #3e82a4;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.timeTableItem-header > span {
+  color: #666666;
+  font-weight: 600;
+}
+
+.timeTableItem {
+  margin-top: 20px;
+  margin-right: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 60px;
+  border: #666 solid 1px;
+}
+
+.timeTableItem > span {
+  margin-top: 3px;
+  color: #3e82a4;
+  font-weight: 500;
+}
+
+.timeTable-row {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
 }
