--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,52 +1,91 @@
-@media (min-width: 700px) {
-.side_nav {
+
+.App {
+    width: 100%;
+    height: 100vh;
+    font-family: sans-serif;
     display: flex;
-    flex-direction: column;
-    width: 20rem;
-    background-color: #03c75a;
-    position: fixed;
-    z-index: 2;
-    height: 100%;
-    padding-top: 2.3rem;
-    transition-duration: 0.3s;
-    border-radius: 0 2% 0 0;
+    justify-content: center;
+    align-items: center;
+  }
+
+@media (min-width: 900px){
+  .container .dropdownLabel {
     visibility: hidden;
-}
-.side_nav:target {
-    visibility: visible;
+  }
+  .container .dropdownLabel :target{
+    visibility:  visible;
 }
 }
 
-.side_nav a, .closebtn {
-    color: white;
-    display: inline;
-    font-size: 2.5rem;
-    margin: 1rem 0 1rem 1rem;
-    font-weight: 800;
-}
+  #dropdown {
+    left: 0;
+    visibility: hidden;
+    position: absolute;
+  }
+  .dropdownLabel {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px;
+    margin-right: 89%;
+ 
+  }
+  .dropdownLabel:hover {
+    cursor: pointer;
+  }
+  .content {
+    display: none;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    background: white;
+    box-shadow: 0 4px 5px 0 #00000026;
+  }
+  
+  #dropdown:checked + label + div.content {
+    display: block;
+    border-top: 1px solid #00000026;
+  }
+  .caretIcon {
+    transition: transform 250ms ease-out;
+  }
+  #dropdown:checked + label > .caretIcon {
+    transform: rotate(-180deg);
+  }
+  
+  .content ul {
+    list-style-type: none;
+    padding: 12px;
+    margin: 0;
+  }
+  .content ul li {
+    margin: 0.8rem 0;
+  }
+  
+
 
 .display_sidebar {
     left: 0;
 }
 
-.openbtn {
-    font-size: 30px;
-}
+.menubar{
+    display: block;
+    width: 20%;
+    height: 20%;
+    object-fit: contain;
+} 
 
-.openbtn, .closebtn {
-    cursor: pointer;
-}
-
-.side_nav .closebtn {
-    position: absolute;
-    top: -0.5rem;
-    right: 1rem;
-    font-size: 3rem;
-    margin: 0;
+.menubar li a img{
+    width: 20%;
+    height: 10%;
 }
 
 
-@media (max-width: 700px){
+
+
+
+
+
+@media (max-width: 900px){
     .header .header_content {
     position: relative;
     z-index: 101;
